--- a/www/src/components/docs-sidenav.astro
+++ b/www/src/components/docs-sidenav.astro
@@ -173,9 +173,10 @@ const NAV_ITEMS = [
 
   .section-title {
     color: var(--tz-color-text-2);
-    font-size: var(--tz-typography-300-medium-font-size);
-    font-weight: var(--tz-typography-300-medium-font-weight);
-    line-height: var(--tz-typography-300-medium-line-height);
+    font-size: var(--tz-font-body-font-size);
+    font-variation-settings: var(--tz-font-body-variation-settings);
+    font-weight: var(--tz-font-body-font-weight);
+    line-height: var(--tz-font-body-line-height);
     margin: 0 var(--grid) var(--tz-space-200);
   }
 
@@ -184,7 +185,7 @@ const NAV_ITEMS = [
     align-items: center;
     color: var(--tz-color-text-1);
     display: flex;
-    font-size: var(--tz-typography-200-regular-font-size);
+    font-size: var(--tz-font-body-font-size);
     height: var(--tz-space-control-s);
     text-decoration: none;
     padding-inline: var(--grid);
@@ -221,7 +222,7 @@ const NAV_ITEMS = [
   }
 
   .nav-sublink {
-    font-size: var(--tz-typography-200-regular-font-size);
+    font-size: var(--tz-font-body-font-size);
     opacity: 0.8;
     padding-inline-start: var(--grid);
 
