--- a/packages/storybook/.storybook/global.css
+++ b/packages/storybook/.storybook/global.css
@@ -1,10 +1,8 @@
 body {
-  font-family: var(--tz-typography-200-regular-font-family);
-  font-size: var(--tz-typography-200-regular-font-size);
-  font-variation-settings: var(
-    --tz-typography-200-regular-font-variation-settings
-  );
-  font-weight: var(--tz-typography-200-regular-font-weight);
+  font-family: var(--tz-font-sans);
+  font-size: var(--tz-font-body-font-size);
+  font-variation-settings: var(--tz-font-body-font-variation-settings);
+  font-weight: var(--tz-font-body-font-weight);
   line-height: 1;
   margin: 0;
 }
