--- a/packages/tiles/src/SubtleInput/SubtleInput.css
+++ b/packages/tiles/src/SubtleInput/SubtleInput.css
@@ -6,9 +6,9 @@
   border-radius: var(--tz-radius-200);
   color: var(--tz-subtle-input-text);
   display: flex;
-  font-family: var(--tz-typography-family-mono);
-  font-size: var(--tz-typography-200-regular-font-size);
-  font-weight: var(--tz-typography-200-regular-font-weight);
+  font-family: var(--tz-font-mono);
+  font-size: var(--tz-font-body-font-size);
+  font-weight: var(--tz-font-body-font-weight);
   gap: var(--tz-space-200);
   letter-spacing: 0;
   outline: 1px solid var(--tz-subtle-input-border);
@@ -31,10 +31,10 @@
   border: none;
   color: inherit;
   flex: 1 0 auto;
-  font-family: var(--tz-typography-family-mono);
-  font-size: var(--tz-typography-200-regular-font-size);
+  font-family: var(--tz-font-mono);
+  font-size: var(--tz-font-body-font-size);
   font-variant-ligatures: none;
-  font-weight: var(--tz-typography-200-regular-font-weight);
+  font-weight: var(--tz-font-body-font-weight);
   line-height: var(--height);
   min-width: calc(4 * var(--height));
   outline: none;
