--- a/packages/token-lab/src/components/EditableToken/EditableToken.module.css
+++ b/packages/token-lab/src/components/EditableToken/EditableToken.module.css
@@ -1,16 +1,16 @@
 .cell {
   border-bottom: var(--tz-border-3);
   border-right: var(--tz-border-3);
-  font-family: var(--tz-typography-200-regular-font-family);
-  font-size: var(--tz-typography-200-regular-font-size);
-  font-variation-settings: var(--tz-typography-200-regular-font-variation-settings);
-  font-weight: var(--tz-typography-200-regular-font-weight);
-  letter-spacing: var(--tz-typography-200-regular-letter-spacing);
-  line-height: var(--tz-typography-200-regular-line-height);
+  font-family: var(--tz-font-sans);
+  font-size: var(--tz-font-body-font-size);
+  font-variation-settings: var(--tz-font-body-font-variation-settings);
+  font-weight: var(--tz-font-body-font-weight);
+  letter-spacing: var(--tz-font-body-letter-spacing);
+  line-height: var(--tz-font-body-line-height);
   padding: 0.5rem;
 }
 
 .code {
-  font-family: var(--tz-typography-family-mono);
+  font-family: var(--tz-font-mono);
   font-size: 0.75rem;
 }
