--- a/packages/token-lab/src/components/TokensNav/TokensNav.module.css
+++ b/packages/token-lab/src/components/TokensNav/TokensNav.module.css
@@ -16,7 +16,7 @@
 .error {
   background: var(--tz-color-bg-error);
   color: var(--tz-color-text-error);
-  font-family: var(--tz-typography-family-mono);
+  font-family: var(--tz-font-mono);
   font-size: 0.875rem;
   padding: 1rem;
 }
@@ -29,12 +29,12 @@
   border-right: 0;
   border-top: 0;
   color: var(--tz-color-text-2);
-  font-family: var(--tz-typography-100-regular-font-family);
-  font-size: var(--tz-typography-100-regular-font-size);
-  font-variation-settings: var(--tz-typography-100-regular-font-variation-settings);
-  font-weight: var(--tz-typography-100-regular-font-weight);
+  font-family: var(--tz-font-sans);
+  font-size: var(--tz-font-label-small-font-size);
+  font-variation-settings: var(--tz-font-label-small-font-variation-settings);
+  font-weight: var(--tz-font-label-small-font-weight);
   height: var(--search-height);
-  letter-spacing: var(--tz-typography-100-regular-letter-spacing);
+  letter-spacing: var(--tz-font-label-small-letter-spacing);
   line-height: var(--search-height);
   padding: 0;
   text-indent: var(--search-height);
