--- a/packages/token-lab/src/styles/global.css
+++ b/packages/token-lab/src/styles/global.css
@@ -5,11 +5,11 @@ html {
 body {
   background-color: var(--tz-color-bg-1);
   color: var(--tz-color-text-1);
-  font-family: var(--tz-typography-family-sans);
+  font-family: var(--tz-font-sans);
   font-size: 100%;
   font-variant-numeric: tabular-nums;
-  font-variation-settings: var(--tz-typography-200-regular-font-variation-settings);
-  font-weight: var(--tz-typography-200-regular-font-weight);
+  font-variation-settings: var(--tz-font-body-font-variation-settings);
+  font-weight: var(--tz-font-body-font-weight);
   line-height: 1;
   margin: 0;
 }
@@ -32,5 +32,5 @@ body {
 
 code,
 pre {
-  font-family: var(--tz-typography-family-monospace);
+  font-family: var(--tz-font-monospace);
 }
